--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <figcaption>A bundle of organic beets from a local farm food co-op program. 55 to 65 days are needed from germination to harvest of the root.</figcaption>
     </figure>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
-    <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q> “ Fact, bears eat beets. Bears, beets, <em>Battlestar Galactica</em> ”.</q></p>
+    <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q> “ Fact, bears eat beets. Bears, beets, <em>Battlestar Galactica</em> .”</q></p>
 
     <blockquote>
       I have some <i>weird</i> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.— <cite>Chris Pratt</cite>
@@ -35,6 +35,7 @@
       Common-varieties
     </h2>
     <ol>
+      <li>Albino</li>
       <li>Bull’s Blood</li>
       <li>Chioggia</li>
       <li>Detroit Dark Red</li>
