--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     <figure>
       <img src="images/beets.jpg" alt="beets.jpg">
-      <figcaption>A bundle of organic beets from a local farm food co-op program. 55 to 65 days are needed from germination to harvest of the root.</figcaption>
+      <figcaption>A bundle of organic beets from a local farm food co-op program.<figcaption>
+
+      <p><b> 55 to 65 days are needed from germination to harvest of the root.</b></p>
     </figure>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q> “ Fact, bears eat beets. Bears, beets, <em>Battlestar Galactica</em> .”</q></p>
@@ -31,29 +33,26 @@
     <blockquote>
       I have some <i>weird</i> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.— <cite>Chris Pratt</cite>
     </blockquote>
-    <h2>
-      Common-varieties
-    </h2>
+    <h2 class="common">Common-varieties</h2>
     <ol>
-      <li>Albino</li>
-      <li>Bull’s Blood</li>
-      <li>Chioggia</li>
-      <li>Detroit Dark Red</li>
-      <li>Early Wonder</li>
+      <li class="common">Albino</li>
+      <li class="common">Bull’s Blood</li>
+      <li class="common">Chioggia</li>
+      <li class="common">Detroit Dark Red</li>
+      <li class="common">Early Wonder</li>
     </ol>
     <h2>
       Nutritional-information
     </h2>
     <dl>
-      <dt>serving size:</dt>
-      <dd><data value="100">100g</data></dd>
-      <dt>Energy:</dt>
+      <dt>serving size:<cite> 100g</cite></dt>
+      <dt><b>Energy:</b></dt>
       <dd><data value="180">180 kJ</data></dd>
-      <dt>Carbohydrates:</dt>
+      <dt><b>Carbohydrates:</b></dt>
       <dd><data value="9.96">9.96 g</data></dd>
-      <dt>Fat:</dt>
+      <dt><b>Fat:</b></dt>
       <dd><data value="0.18">0.18 g</data></dd>
-      <dt>Protein:</dt>
+      <dt><b>Protein:</b></dt>
       <dd><data value="1.68">1.68 g</data></dd>
     </dl>
   </main>
