--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   </header>
   <main>
 
-    <div>
+    <figcaption>
       <img src="images/beets.jpg" alt="beets.jpg">
-      <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+      <figure>A bundle of organic beets from a local farm food co-op program.</figure>
       <p><b> 55 to 65 days are needed from germination to harvest of the root.</b></p>
-    </div>
+    </figcaption>
     <p>The usually deep purple roots of <b class="beets">beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q> “ Fact, bears eat beets. Bears, beets, <em>Battlestar Galactica</em> ”.</q></p>
 
